<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_add">+</string>
    <string name="number_sub">-</string>
    <string name="number_mul">*</string>
    <string name="number_div">/</string>
    <string name="number_clear">C</string>
    <string name="number_equal">=</string>
    <string name="number_error">Err</string>
    <string name="number_errMessage">除数不能为零</string>
    <string name="number_errTitle">错误</string>
    <string name="number_confirm">确定</string>
</resources>
