<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.jikexueyuan.simplecalculator.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textDisplay"
        android:gravity="right"
        android:textSize="80sp"
       android:layout_weight="1"
        android:background="@color/colorTextBg"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:text="@string/number_seven"
            android:textSize="50sp"
            android:id="@+id/btn7"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:text="@string/number_eight"
            android:textSize="50sp"
            android:id="@+id/btn8"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:text="@string/number_nine"
            android:textSize="50sp"
            android:id="@+id/btn9"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:text="@string/number_add"
            android:textSize="50sp"
            android:id="@+id/btnAdd"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:text="@string/number_four"
            android:textSize="50sp"
            android:id="@+id/btn4"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:text="@string/number_five"
            android:textSize="50sp"
            android:id="@+id/btn5"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:text="@string/number_six"
            android:textSize="50sp"
            android:id="@+id/btn6"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:text="@string/number_sub"
            android:textSize="50sp"
            android:id="@+id/btnSub"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:text="@string/number_one"
            android:textSize="50sp"
            android:id="@+id/btn1"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:text="@string/number_two"
            android:textSize="50sp"
            android:id="@+id/btn2"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:text="@string/number_three"
            android:textSize="50sp"
            android:id="@+id/btn3"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:text="@string/number_mul"
            android:textSize="50sp"
            android:id="@+id/btnMul"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:text="@string/number_clear"
            android:textSize="50sp"
            android:id="@+id/btnClear"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:text="@string/number_zero"
            android:textSize="50sp"
            android:id="@+id/btn0"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:text="@string/number_equal"
            android:textSize="50sp"
            android:id="@+id/btnEqual"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:text="@string/number_div"
            android:textSize="50sp"
            android:id="@+id/btnDiv"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>
